--- a/package.json
+++ b/package.json
@@ -17,6 +17,15 @@
   },
   "homepage": "https://github.com/SufiyanMansoor/MeanCrudObject-#readme",
   "dependencies": {
-    "express": "^4.14.0"
+    "angular": "^1.5.8",
+    "angular-animate": "^1.5.8",
+    "angular-aria": "^1.5.8",
+    "angular-material": "^1.1.1",
+    "body-parser": "^1.15.2",
+    "express": "^4.14.0",
+    "mongoose": "^4.6.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.10.2"
   }
 }
